--- a/journalismwallah.html
+++ b/journalismwallah.html
@@ -308,15 +308,15 @@
             </div>
             <div class="hidden-mobile md:flex md:items-center md:space-x-6" id="navbarNav">
                 <button class="text-white text-2xl md:hidden" id="nav-close"><i class="fas fa-times"></i></button>
-                <a href="https://uzairb2b.github.io/certificate/" class="nav-link">Download Certificate</a>
-                <a href="https://uzairb2b.github.io/resume_maker/" class="nav-link">Create Resume</a>
-                <a href="https://www.instagram.com/uzairvibes" class="nav-link">Contact</a>
-                <a href="https://onlinecybercafe.github.io/varanasi/" class="nav-link">Cyber Cafe</a>
-                <a href="https://uzairb2b.blogspot.com" class="nav-link">B2B Services</a>
-                <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" class="nav-link">WhatsApp Group</a>
-                <a href="https://educationsimplified.github.io/internship/" class="nav-link">Internships</a>
-                <a href="https://uzairb2b.github.io/education/" class="nav-link">Learn Skills</a>
-                <a href="https://educationsimplified.github.io/mgkvpjournalism/" class="nav-link">My Resume</a>
+                <a href="https://uzairb2b.github.io/certificate/" class="nav-link">Download Certificate</a><br>
+                <a href="https://uzairb2b.github.io/resume_maker/" class="nav-link">Create Resume</a><br>
+                <a href="https://www.instagram.com/uzairvibes" class="nav-link">Contact</a><br>
+                <a href="https://onlinecybercafe.github.io/varanasi/" class="nav-link">Cyber Cafe</a><br>
+                <a href="https://uzairb2b.blogspot.com" class="nav-link">B2B Services</a><br>
+                <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" class="nav-link">Join WhatsApp Group</a><br>
+                <a href="https://educationsimplified.github.io/internship/" class="nav-link">Apply Internships / Jobs</a><br>
+                <a href="https://uzairb2b.github.io/education/" class="nav-link">Learn Skills</a><br>
+                <a href="https://educationsimplified.github.io/mgkvpjournalism/" class="nav-link">My Resume</a><br>
             </div>
         </div>
     </nav>
