--- a/index.html
+++ b/index.html
@@ -332,6 +332,94 @@
             }
         }
     </style>
+
+    <style>
+      
+      .youtube-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    background: rgba(0, 0, 0, 0.8);
+    border: 2px solid #00e1ff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px #0032e6, 0 0 30px #98ffff;
+    padding: 10px;
+    text-align: center;
+    z-index: 200;
+    opacity: 0;
+    animation: fadeIn 0.8s forwards;
+    cursor: grab;
+}
+
+/* Title inside the popup */
+.youtube-popup h3 {
+    color: #ffffff;
+    font-size: 1em;
+    margin-bottom: 5px;
+    text-shadow: 0 0 10px #130072;
+}
+
+/* Close button */
+.close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    color: rgb(255, 255, 0);
+    font-size: 2.5em;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.close-btn:hover {
+    color: #f2ff00;
+    text-shadow: 0 0 10px #000000;
+}
+
+/* Draggable Handle */
+.drag-handle {
+    background: #ff0000;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    padding: 5px;
+    text-align: center;
+    cursor: grab;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+/* Animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .youtube-popup {
+        width: 90%;
+        max-width: 300px;
+    }
+
+    .youtube-popup iframe {
+        width: 100%;
+        height: 170px;
+    }
+
+    .youtube-popup h3 {
+        font-size: 0.9em;
+    }
+}
+
+</style>
+
 </head>
 
 <body>
@@ -348,6 +436,9 @@
             </div>
             <div class="hidden-mobile md:flex md:items-center md:space-x-6" id="navbarNav">
                 <button class="text-white text-2xl md:hidden" id="nav-close"><i class="fas fa-times"></i></button>
+                <a href="version1.html" class="nav-link">Old WebSite Version 1</a><br>
+                <a href="version2.html" class="nav-link">Old WebSite Version 2</a><br>
+                <a href="version3.html" class="nav-link">Old WebSite Version 3</a><br>
                 <a href="https://uzairb2b.github.io/certificate/" class="nav-link">Download Certificate</a><br>
                 <a href="https://uzairb2b.github.io/resume_maker/" class="nav-link">Create Resume</a><br>
                 <a href="https://www.instagram.com/uzairvibes" class="nav-link">Contact</a><br>
@@ -360,6 +451,7 @@
             </div>
         </div>
     </nav>
+
 
     <header class="hero-section text-center text-white">
         <div class="container relative z-10">
@@ -382,6 +474,22 @@
             </div>
         </div>
     </header>
+
+
+     <!-- YouTube Notification -->
+   <div id="youtube-notification" class="youtube-popup">
+    <div id="drag-handle" class="drag-handle">🔍 Website Kaise Chalana Hai</div>
+    <span class="close-btn" onclick="closeNotification()">&times;</span>
+    <h3>Watch this Video</h3>
+    <iframe width="300" height="180" 
+        src="https://www.youtube.com/embed/T7Mv6SGimtc?si=Xb2ACVOzXYeIH5-c&autoplay=1" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen>
+    </iframe>
+</div>
  
 <body class="bg-darkBg text-white"> <!-- वेबसाइट का मुख्य बैकग्राउंड डार्क और टेक्स्ट सफेद रहेगा -->
 
@@ -558,6 +666,85 @@
             };
             new Typed(".typed", options);
         });
+
+
+                function closeNotification() {
+        document.getElementById("youtube-notification").style.display = "none";
+    }
+
+    // Show notification after 1 second
+    setTimeout(() => {
+        document.getElementById("youtube-notification").style.opacity = "1";
+    }, 1000);
+
+    function makeDraggable(element, handle) {
+        let isDragging = false;
+        let isActivated = false;
+        let offsetX, offsetY, timer;
+
+        // Double-click to activate dragging
+        handle.addEventListener("dblclick", () => {
+            isActivated = true;
+            handle.style.background = "#ffcc00"; // Highlight activation
+            setTimeout(() => {
+                handle.style.background = "#00e6e6"; // Revert color
+            }, 1000);
+        });
+
+        // Hold for 0.5s to activate dragging
+        handle.addEventListener("mousedown", (e) => {
+            timer = setTimeout(() => {
+                isActivated = true;
+                handle.style.background = "#ffcc00";
+                setTimeout(() => {
+                    handle.style.background = "#00e6e6";
+                }, 1000);
+            }, 500);
+        });
+
+        // Cancel activation if released before 0.5s
+        handle.addEventListener("mouseup", () => clearTimeout(timer));
+        handle.addEventListener("mouseleave", () => clearTimeout(timer));
+
+        // Drag start
+        handle.addEventListener("mousedown", (e) => {
+            if (!isActivated) return;
+            isDragging = true;
+            offsetX = e.clientX - element.getBoundingClientRect().left;
+            offsetY = e.clientY - element.getBoundingClientRect().top;
+            element.style.cursor = "grabbing";
+        });
+
+        // Drag movement
+        document.addEventListener("mousemove", (e) => {
+            if (isDragging) {
+                let x = e.clientX - offsetX;
+                let y = e.clientY - offsetY;
+                element.style.left = `${x}px`;
+                element.style.top = `${y}px`;
+                element.style.transform = "none"; // Remove center alignment
+            }
+        });
+
+        // Stop drag on mouse up
+        document.addEventListener("mouseup", () => {
+            isDragging = false;
+            element.style.cursor = "grab";
+        });
+
+        // Click outside to deactivate
+        document.addEventListener("click", (e) => {
+            if (!element.contains(e.target)) {
+                isActivated = false;
+            }
+        });
+    }
+
+    makeDraggable(
+        document.getElementById("youtube-notification"),
+        document.getElementById("drag-handle")
+    );    
+
     </script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://static.elfsight.com/platform/platform.js" async></script>
