--- a/admin.html
+++ b/admin.html
@@ -97,7 +97,7 @@
     <!-- Navigation Bar - Copied and adapted from GALLERY.HTML -->
     <nav class="bg-darkBg p-4 shadow-lg border-b-2 border-primary dark:bg-darkBg dark:border-primary">
         <div class="container mx-auto flex justify-between items-center">
-            <a class="text-white text-2xl font-bold tracking-wide transition-colors duration-300 hover:text-primary" href="https://uzairb2b.github.io/home/index.html">JOURNALISM & MASS COMMUNICATION</a>
+            <a class="text-white text-2xl font-bold tracking-wide transition-colors duration-300 hover:text-primary" href="https://uzairb2b.github.io/home/index.html">EDUCATION SIMPLIFIED</a>
             <button id="themeToggle" class="theme-toggle-button text-white text-2xl focus:outline-none">
                 ☀️ <!-- Initial state, updated by JS -->
             </button>
