--- a/index.html
+++ b/index.html
@@ -512,9 +512,11 @@
 
 
                  
-              <a href="help.html" class="grid-card">
-                    <i class="fal fa-user-shield"></i>
-                    <span>Emerygency Help (RAGGING & MORE..) </span>
+             <a href="help.html" class="grid-card" title="Emergency Anti-Ragging Help">
+  <i class="fas fa-exclamation-triangle text-red-600 text-2xl" aria-hidden="true"></i>
+  <span class="font-semibold text-red-700">Anti-Ragging & Emergency Help</span>
+</a>
+
                    
               <a href="admin.html" class="grid-card">
                     <i class="fas fa-user-shield text-4xl mb-3 text-primary"></i>
